tests/baselines/reference/moduleExports1.errors.txt
moduleExports1.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleExports1.ts(1,26): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleExports1.ts(1,34): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleExports1.ts(13,6): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
moduleExports1.ts(13,22): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== moduleExports1.ts (5 errors) ====
    export module TypeScript.Strasse.Street {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                             ~~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                                     ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	export class Rue {
    		public address:string;
    	}	
    }
    
    var rue = new TypeScript.Strasse.Street.Rue();
    
    rue.address = "1 Main Street";
    
    void 0;
    
    if (!module.exports) module.exports = "";
         ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                         ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.